--- a/app/src/main/res/layout/activity_gift_card.xml
+++ b/app/src/main/res/layout/activity_gift_card.xml
@@ -76,7 +76,22 @@
                 android:textColor="@color/primary_black"
                 android:textColorHint="@color/light_gray"
                 android:textCursorDrawable="@drawable/cursor_color"
-                android:textSize="@dimen/_10sdp" />
+                android:textSize="@dimen/_10sdp"
+                android:layout_weight="1"/>
+
+            <LinearLayout
+                android:id="@+id/clearTextLL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_21sdp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="@dimen/_10sdp"
+                    android:layout_height="@dimen/_10sdp"
+                    android:layout_marginRight="@dimen/_10sdp"
+                    android:src="@drawable/ic_close" />
+            </LinearLayout>
         </LinearLayout>
 
 
@@ -146,7 +161,7 @@
         android:layout_marginBottom="@dimen/_100sdp"
         android:fontFamily="@font/opensans_regular"
         android:gravity="center"
-        android:text="You have no brands"
+        android:text="No Gift Cards Found"
         android:textColor="@color/light_gray"
         android:textSize="@dimen/_10ssp"
         android:visibility="gone" />
