--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -53,6 +53,7 @@
         <item name="boxCornerRadiusBottomStart">12dp</item>
         <item name="boxCornerRadiusTopEnd">12dp</item>
         <item name="boxCornerRadiusTopStart">12dp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 
@@ -160,4 +161,5 @@
         <item name="colorAccent">@color/white</item>
 
     </style>
+
 </resources>
