--- a/app/src/main/res/layout/activity_pay_request.xml
+++ b/app/src/main/res/layout/activity_pay_request.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f2f4f5"
-    tools:context=".view.PayRequestTransactionActivity">
+    tools:context=".view.PayRequestActivity">
 
     <LinearLayout
         android:id="@+id/topLL"
@@ -82,7 +82,7 @@
 
 
                         <ImageView
-                            android:id="@+id/profileIV"
+                            android:id="@+id/imgProfile"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:src="@drawable/image"
@@ -167,7 +167,7 @@
                                 android:orientation="horizontal">
 
                                 <TextView
-                                    android:id="@+id/amontDollorTV"
+                                    android:id="@+id/tvCurrency"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_alignParentStart="true"
@@ -238,7 +238,7 @@
                                         app:layout_constraintVertical_bias="0.733" />
 
                                     <ImageView
-                                        android:id="@+id/changeCurrencyTypeIV"
+                                        android:id="@+id/imgConvert"
                                         android:layout_width="@dimen/_21sdp"
                                         android:layout_height="@dimen/_21sdp"
                                         android:layout_gravity="center"
@@ -254,11 +254,10 @@
                         </LinearLayout>
 
                         <LinearLayout
-                            android:id="@+id/payrequestAvailBalLL"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/lyBalance"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/payLL"
-                            android:layout_marginStart="@dimen/_50sdp"
+                            android:gravity="center_horizontal"
                             android:orientation="horizontal">
 
                             <TextView
@@ -291,25 +290,6 @@
                                 android:textColor="@color/balance"
                                 android:textSize="@dimen/_9ssp"></TextView>
 
-                            <TextView
-                                android:id="@+id/minAmountErr"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/opensans_regular"
-                                android:text="Minimum amount is [act.limit]CYN"
-                                android:textColor="@color/error"
-                                android:textSize="@dimen/_12ssp"
-                                android:visibility="gone" />
-
-                            <TextView
-                                android:id="@+id/exceedAvailBalErr"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/opensans_regular"
-                                android:text="Amount entered exceeds available balance"
-                                android:textColor="@color/error"
-                                android:textSize="@dimen/_12ssp"
-                                android:visibility="gone" />
                         </LinearLayout>
 
                         <View
