--- a/app/src/main/res/layout/notifications_item.xml
+++ b/app/src/main/res/layout/notifications_item.xml
@@ -3,92 +3,151 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginBottom="@dimen/_10sdp">
+    android:layout_marginBottom="@dimen/_10sdp"
+    android:orientation="vertical">
 
 
-    <TextView
-        android:id="@+id/tvDate"
+    <LinearLayout
+        android:id="@+id/notificationItemLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_7sdp"
-        android:fontFamily="@font/opensans_bold"
-        android:gravity="center_vertical"
-        android:paddingLeft="15dp"
-        android:text="May 8,2021"
-        android:textColor="@color/primary_black"
-        android:textSize="@dimen/_10ssp"
-        android:visibility="gone" />
+        android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cvNotification"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="@dimen/_10sdp"
-        app:cardElevation="0dp">
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvNotifDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/_11sdp">
+            android:layout_marginBottom="@dimen/_7sdp"
+            android:fontFamily="@font/opensans_bold"
+            android:gravity="center_vertical"
+            android:paddingLeft="15dp"
+            android:text="May 8,2021"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_10ssp"
+            android:visibility="gone" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvNotification"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/_10sdp"
+            app:cardElevation="0dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:layout_marginBottom="@dimen/_5sdp">
+                android:orientation="vertical"
+                android:padding="@dimen/_11sdp">
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/readStatusCV"
-                    android:layout_width="@dimen/_6sdp"
-                    android:layout_height="@dimen/_6sdp"
-                    app:cardBackgroundColor="@color/primary_color"
-                    app:cardCornerRadius="5dp"
-                    android:layout_marginRight="@dimen/_5sdp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_5sdp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/readStatusCV"
+                        android:layout_width="@dimen/_6sdp"
+                        android:layout_height="@dimen/_6sdp"
+                        android:layout_marginRight="@dimen/_5sdp"
+                        app:cardBackgroundColor="@color/primary_color"
+                        app:cardCornerRadius="5dp" />
+
+                    <TextView
+                        android:id="@+id/subject"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/_5sdp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/opensans_bold"
+                        android:gravity="center_vertical"
+                        android:text="May 8,2021"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_11ssp"
+                        android:visibility="visible" />
+
+                    <TextView
+                        android:id="@+id/timeTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:gravity="center_vertical"
+                        android:text="May 8,2021"
+                        android:textColor="@color/light_gray"
+                        android:textSize="@dimen/_8ssp"
+                        android:visibility="visible" />
+
+                </LinearLayout>
 
                 <TextView
-                    android:id="@+id/subject"
+                    android:id="@+id/messageTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="@font/opensans_bold"
+                    android:fontFamily="@font/opensans_regular"
                     android:gravity="center_vertical"
                     android:text="May 8,2021"
-                    android:textColor="@color/primary_black"
+                    android:textColor="@color/dark_grey"
                     android:textSize="@dimen/_11ssp"
-                    android:visibility="visible"
-                    android:layout_marginRight="@dimen/_5sdp"/>
-
-                <TextView
-                    android:id="@+id/timeTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:gravity="center_vertical"
-                    android:text="May 8,2021"
-                    android:textColor="@color/light_gray"
-                    android:textSize="@dimen/_8ssp"
                     android:visibility="visible" />
 
+                <LinearLayout
+                    android:id="@+id/receivedLL"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <LinearLayout
+                        android:id="@+id/denyLL"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_28sdp"
+                        android:layout_marginEnd="@dimen/_8sdp"
+                        android:layout_weight="1"
+                        android:background="@drawable/shape_green_round_rect_core">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:fontFamily="@font/opensans_bold"
+                            android:gravity="center"
+                            android:text="Deny"
+                            android:textColor="@color/primary_green"
+                            android:textSize="@dimen/_12ssp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/payLL"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_28sdp"
+                        android:layout_marginStart="@dimen/_8sdp"
+                        android:layout_weight="1"
+                        android:background="@drawable/shape_green_round_rect"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/opensans_bold"
+                            android:gravity="center"
+                            android:text="Pay"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/_12ssp" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/messageTV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="@font/opensans_regular"
-                android:gravity="center_vertical"
-                android:text="May 8,2021"
-                android:textColor="@color/dark_grey"
-                android:textSize="@dimen/_11ssp"
-                android:visibility="visible" />
+        </androidx.cardview.widget.CardView>
 
 
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
+
 
 </LinearLayout>
