--- a/app/src/main/res/layout/activity_withdraw_gift_card_transactions.xml
+++ b/app/src/main/res/layout/activity_withdraw_gift_card_transactions.xml
@@ -488,9 +488,9 @@
                             android:paddingBottom="@dimen/_11sdp">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
+                                android:layout_weight=".7"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="Recipient Email"
                                 android:textColor="@color/dark_grey"
@@ -498,10 +498,11 @@
 
                             <TextView
                                 android:id="@+id/withGiftReciEmailTV"
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
+                                android:layout_weight="1.3"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
 
