--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -149,6 +149,7 @@
 
     <style name="prefix" parent="TextAppearance.AppCompat.Body1">
         <item name="android:textSize">@dimen/_14ssp</item>
+        <item name="android:textStyle">bold</item>
     </style>
     <style name="Calender" parent="Theme.MaterialComponents.Light.DarkActionBar">
     <!-- Customize your theme here. -->
